Banner - fix issue with overflow swiper (commit main style)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -806,6 +806,7 @@ h4 {
 .banner__swiper {
   height: 30rem;
   position: relative;
+  overflow-x: hidden;
 }
 
 .banner .swiper-slide {
